game/src/tributes/snapshots/game__tributes__combat_beat__tests__snapshots__wound_with_weapon_break_and_penalty.snap
---
source: game/src/tributes/combat_beat.rs
expression: lines
---
- 🗡️ Alice breaks their Iron Sword
- "🗡️ Alice's Iron Sword shatters mid-swing! (-3 attack)"
- "🔪 Alice attacks Bob, and wins!"
- 🤕 Alice wounds Bob
